--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "aos": "^2.3.4",
+    "axios": "^0.20.0",
+    "http-proxy-middleware": "^1.0.6",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-responsive-carousel": "^3.2.10",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
+    "sass-loader": "^10.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
