--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/JWhotsan/JAKSIM31/issues"
   },
-  "homepage": "https://github.com/JWhotsan/JAKSIM31#readme"
+  "homepage": "https://github.com/JWhotsan/JAKSIM31#readme",
+  "dependencies": {
+    "concurrently": "^5.3.0"
+  }
 }
